--- a/package.json
+++ b/package.json
@@ -1,23 +1,44 @@
 {
-    "name": "",
-    "private": true,
-    "scripts": {
-        "postinstall": "node scripts/install.js",
-        "launch": "node scripts/launch.js",
-        "build": "run-p build:*",
-        "build:panorama": "tsc --project content/panorama/scripts/custom_game/tsconfig.json",
-        "build:vscripts": "tstl --project game/scripts/vscripts/tsconfig.json",
-        "dev": "run-p dev:*",
-        "dev:panorama": "tsc --project content/panorama/scripts/custom_game/tsconfig.json --watch",
-        "dev:vscripts": "tstl --project game/scripts/vscripts/tsconfig.json --watch"
-    },
-    "devDependencies": {
-        "@moddota/dota-lua-types": "^4.7.1",
-        "@moddota/panorama-types": "^1.5.0",
-        "find-steam-app": "^1.0.2",
-        "fs-extra": "^9.0.0",
-        "npm-run-all": "^4.1.5",
-        "typescript": "^3.9.3",
-        "typescript-to-lua": "^0.34.0"
-    }
+  "name": "spellwood",
+  "version": "0.1.0",
+  "description": "DotA 2 hero defence mod",
+  "keywords": [
+    "dota",
+    "dota 2",
+    "mod",
+    "game",
+    "hero defence",
+    "hero defense"
+  ],
+  "homepage": "https://github.com/dagerikhl/spellwood",
+  "author": {
+    "email": "dagerikhl@gmail.com",
+    "name": "Dag Erik Løvgren",
+    "url": "https://github.com/dagerikhl"
+  },
+  "repository": {
+    "url": "https://github.com/dagerikhl/spellwood",
+    "type": "git"
+  },
+  "private": false,
+  "scripts": {
+    "postinstall": "node scripts/install.js",
+    "launch": "node scripts/launch.js",
+    "build": "run-p build:*",
+    "build:panorama": "tsc --project content/panorama/scripts/custom_game/tsconfig.json",
+    "build:vscripts": "tstl --project game/scripts/vscripts/tsconfig.json",
+    "dev": "run-p dev:*",
+    "dev:panorama": "tsc --project content/panorama/scripts/custom_game/tsconfig.json --watch",
+    "dev:vscripts": "tstl --project game/scripts/vscripts/tsconfig.json --watch"
+  },
+  "devDependencies": {
+    "@moddota/dota-lua-types": "4.7.2",
+    "@moddota/panorama-types": "1.6.1",
+    "find-steam-app": "1.0.2",
+    "fs-extra": "9.0.0",
+    "npm-run-all": "4.1.5",
+    "prettier": "^2.2.1",
+    "typescript": "3.9.3",
+    "typescript-to-lua": "0.34.0"
+  }
 }
