--- a/package.json
+++ b/package.json
@@ -29,16 +29,26 @@
     "build:vscripts": "tstl --project game/scripts/vscripts/tsconfig.json",
     "dev": "run-p dev:*",
     "dev:panorama": "tsc --project content/panorama/scripts/custom_game/tsconfig.json --watch",
-    "dev:vscripts": "tstl --project game/scripts/vscripts/tsconfig.json --watch"
+    "dev:vscripts": "tstl --project game/scripts/vscripts/tsconfig.json --watch",
+    "release": "standard-version"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
     "@moddota/dota-lua-types": "4.7.2",
     "@moddota/panorama-types": "1.6.1",
     "find-steam-app": "1.0.2",
     "fs-extra": "9.0.0",
+    "husky": "^5.2.0",
     "npm-run-all": "4.1.5",
     "prettier": "^2.2.1",
+    "standard-version": "^9.1.1",
     "typescript": "3.9.3",
     "typescript-to-lua": "0.34.0"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
