docs(app): fix typos in README, use yarn in CI instead of npm

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
   "tasks": [
     {
       "label": "Watch",
-      "type": "npm",
+      "type": "yarn",
       "script": "dev",
       "problemMatcher": "$tsc-watch",
       "isBackground": true,
