docs(app): add more keywords to package

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "mod",
     "game",
     "hero defence",
-    "hero defense"
+    "hero defense",
+    "spellwood",
+    "dagerikhl"
   ],
   "license": "MIT",
   "author": {
