--- a/content/panorama/scripts/custom_game/tsconfig.json
+++ b/content/panorama/scripts/custom_game/tsconfig.json
@@ -3,7 +3,7 @@
     "rootDir": ".",
     "target": "es2017",
     "lib": ["es2017"],
-    "types": ["@moddota/panorama-types"],
+    "types": ["@moddota/panorama-types/normalized"],
     "moduleResolution": "node",
     "strict": true
   }
