feat(kv): add js to kv transpiler, fix heroes

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,11 @@ node_modules
 *.vsnd_c
 panorama_debugger.cfg
 
-# Transpiles JS localization files
+# Transpiled JS localization files
 /game/resource/**/*.js
+
+# Transpiled JS to KV files
+/game/scripts/**/*.txt
 
 # Editors
 .idea/
