--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "build": "run-p build:*",
     "build:panorama": "tsc --project content/panorama/scripts/custom_game/tsconfig.json",
     "build:vscripts": "tstl --project game/scripts/vscripts/tsconfig.json",
+    "build:jsKvTranspilator": "node scripts/jsKvTranspilator.js ./game/scripts",
     "dev": "run-p dev:*",
     "dev:panorama": "tsc --project content/panorama/scripts/custom_game/tsconfig.json --watch",
     "dev:vscripts": "tstl --project game/scripts/vscripts/tsconfig.json --watch",
     "dev:localizationCompiler": "tsc --project node_modules/~resource/tsconfig.json",
     "dev:localizationCompilerWatcher": "tsc --project node_modules/~resource/tsconfig.json --watch",
     "dev:runlocalizationWatcher": "node node_modules/~generator/fsWatcher.js",
+    "dev:jsKvTranspilator": "nodemon -w ./game/scripts -e .kv.js scripts/jsKvTranspilator.js ./game/scripts",
     "init": "link-module-alias && node node_modules/~generator/init.js",
     "release": "standard-version"
   },
@@ -51,6 +53,7 @@
     "husky": "5.2.0",
     "link-module-alias": "1.2.0",
     "node-watch": "0.7.1",
+    "nodemon": "2.0.7",
     "npm-run-all": "4.1.5",
     "prettier": "2.2.1",
     "standard-version": "9.1.1",
