feat(valve-kv): add helper to serialize/deserialize kv files

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,10 @@ panorama_debugger.cfg
 # Transpiled JS to KV files
 /game/scripts/**/*.txt
 
+# valve-kv helper
+/valve-kv/**/*
+!/valve-kv/valveKvHelper.js
+
 # Editors
 .idea/
 
