--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "private": false,
   "scripts": {
     "postinstall": "node scripts/install.js",
+    "prepare": "husky install",
     "launch": "node scripts/launch.js",
     "build": "run-p build:*",
     "build:panorama": "tsc --project content/panorama/scripts/custom_game/tsconfig.json",
@@ -52,7 +53,7 @@
     "@moddota/panorama-types": "1.8.0",
     "find-steam-app": "1.0.2",
     "fs-extra": "9.1.0",
-    "husky": "5.2.0",
+    "husky": "6.0.0",
     "nodemon": "2.0.7",
     "npm-run-all": "4.1.5",
     "prettier": "2.2.1",
@@ -60,10 +61,5 @@
     "typescript": "4.2.4",
     "typescript-to-lua": "0.39.2",
     "valve-kv": "1.2.0"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
   }
 }
